# navit

./: ARCHITECTURE.md  CMakeLists.txt  COPYING  README.md  config.h.cmake  meson.build
cmake/: FindGTK2.cmake  navit_macros.cmake
navit/: .endianess.h.swp  CMakeLists.txt  attr.c  attr.h  attr_def.h  bookmarks.c  bookmarks.h  browserplugin.c  builtin.c  builtin.c.in  cache.c  callback.h  command.c  command.h  config_.c  config_.h  coord.h  country.h  data.h  debug.c  debug.h  endianess.h  event.h  file.c  file.h  geom.c  geom.h  graphics.c  graphics.h  gui.h  item.c  item.h  layout.h  linguistics.h  log.c  main.c  main.h  map.c  map.h  mapset.h  (+37 more)
navit/fib-1.1/: fib.c
navit/graphics/: CMakeLists.txt
navit/graphics/gtk_drawing_area/: graphics_gtk_drawing_area.c
navit/graphics/null/: graphics_null.c
navit/graphics/opengl/: graphics_opengl.c
navit/graphics/qt5/: QNavitQuick.cpp  QNavitWidget.cpp  event_qt5.cpp  graphics_qt5.cpp
navit/graphics/ssd1306/: .graphics_ssd1306.cpp.swp  CMakeLists.txt  graphics_init_animation.cpp  graphics_init_animation.h  graphics_ssd1306.cpp
navit/gui/gtk/: destination.c  gui_gtk_action.c  gui_gtk_poi.c  gui_gtk_window.c
navit/gui/internal/: gui_internal.c  gui_internal_command.c  gui_internal_gesture.c  gui_internal_search.c
navit/gui/qml/: guiProxy.h  gui_qml.cpp
navit/gui/speedsaver/: CMakeLists.txt  gui_speedsaver.c
navit/map/binfile/: binfile.c
navit/map/csv/: csv.c
navit/map/textfile/: textfile.c
navit/maptool/: CMakeLists.txt  boundaries.c  buffer.c  ch.c  coastline.c  itembin.c  maptool.c  maptool.h  misc.c  osm.c  osm_o5m.c  osm_protobuf.c  osm_protobufdb.c  osm_xml.c  tempfile.c  tile.c  zip.c
navit/maptool/google/protobuf-c/: protobuf-c.h
navit/osd/core/: osd_core.c
navit/plugin/pedestrian/: pedestrian.c
navit/plugin/ssd1306/: ssd1306.cpp
navit/speech/cmdline/: speech_cmdline.c
navit/speech/espeak/: speak.c
navit/support/glib/: glibintl.h
navit/vehicle/file/: vehicle_file.c
navit/vehicle/gpsd/: vehicle_gpsd.c
